Fixed weird wrapping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,10 +32,6 @@ body {
   font-size: 120%;
 }
 
-.tweet__text span {
-  float: left;
-}
-
 .tweet__text .username {
   color: #DD6668;
 }
